--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main>
+    <main style="height: 10000px;">
         <header>
             <div class="content">
                 <nav>
@@ -34,9 +34,190 @@
                     </div>
 
                 </nav>
+                <div class="hero">
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">Discover a place
+                            you'll love to live.</h1>
+                        <p class="desc">Get the best real estate deals first,
+                            before they hit the mass market! HOT FORECLOSURE DEALS with one simple search.</p>
+                        <a href="!#" class="btn btn-cta">More About Us</a>
+                    </div>
+                    <img class="hero-img" src="./assets/image/hero-img.svg" alt="Discover a place
+                    you'll love to live.">
+                </div>
             </div>
-
         </header>
+        <div class="clients">
+            <div class="content">
+                <div class="row">
+                    <img src="./assets/image/logo.svg" alt="Besnik.">
+                    <div class="stars">
+                        <img src="./assets/image/star.svg" alt="star">
+                        <img src="./assets/image/star.svg" alt="star">
+                        <img src="./assets/image/star.svg" alt="star">
+                        <img src="./assets/image/star.svg" alt="star">
+                        <img src="./assets/image/star.svg" alt="star">
+                    </div>
+                </div>
+                <div class="row row-desc">
+                    <p class="desc">More than 45,000+ companies trust besnik</p>
+                    <p class="desc">5 Star Ratings (2k+ Review)</p>
+                </div>
+                <div class="row row-img">
+                    <img src="./assets/image/client-1.svg" alt="client-1">
+                    <img src="./assets/image/client-2.svg" alt="client-2">
+                    <img src="./assets/image/client-3.svg" alt="client-3">
+                    <img src="./assets/image/client-4.svg" alt="client-4">
+                    <img src="./assets/image/client-5.svg" alt="client-5">
+                </div>
+            </div>
+        </div>
+
+        <div class="guides">
+            <div class="content">
+                <h2 class="sub-title">How its works?</h2>
+                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
+                    place.</p>
+                <div class="list-guide">
+                    <ul class="guide-item">
+                        <img src="./assets/image/buyer.svg" alt="">
+                        <p>Buyer Guides</p>
+                        <a href="#!"><span>How to buy</span><img class="arow-right" src="./assets/image/arow-right.svg"
+                                alt=""> </a>
+                    </ul>
+                    <ul class="guide-item">
+                        <img src="./assets/image/rent.png" alt="">
+                        <p>Renter Guides</p>
+                        <a href="#!"><span>How to rent</span><img class="arow-right" src="./assets/image/arow-right.svg"
+                                alt=""> </a>
+                    </ul>
+                    <ul class="guide-item">
+                        <img src="./assets/image/seller.svg" alt="">
+                        <p>Seller Guides</p>
+                        <a href="#!"><span>How to sell</span><img class="arow-right" src="./assets/image/arow-right.svg"
+                                alt=""> </a>
+                    </ul>
+                </div>
+
+                <div class="guide-cta">
+                    <a href="#!" class="btn">Sell Full Guidelines</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="featured">
+            <div class="content">
+                <div class="header">
+                    <div class="sub-title">Featured Properties</div>
+                    <div class="row">
+                        <p class="desc">Everything you need to know when you're looking</p>
+                        <a href="#!" class="link">
+                            <span>View All Properties</span>
+                            <img src="./assets/image/arow-right.svg" alt="arow-right">
+                        </a>
+                    </div>
+                </div>
+                <div class="list">
+                    <!-- item 1 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img src="./assets/image/featured-1.jpg" alt="Nikko Apartments" class="thub">
+                        </a>
+                        <div class="body">
+                            <h3 class="title line-clamp">
+                                <a href="#!">
+                                    Nikko Apartments
+                                </a>
+                            </h3>
+                            <p class="desc line-clamp">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/image/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/image/bath.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="./assets/image/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- item 2 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img src="./assets/image/featured-2.jpg" alt="CouCou Homestead" class="thub">
+                        </a>
+                        <div class="body">
+
+                            <h3 class="title line-clamp">
+                                <a href="#!">CouCou Homestead</a>
+                            </h3>
+
+                            <p class="desc line-clamp">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/image/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/image/bath.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="./assets/image/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- item 3 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img src="./assets/image/featured-3.jpg" alt="Lavis 18 Residence" class="thub">
+                        </a>
+                        <div class="body">
+                            <h3 class="title line-clamp">
+                                <a href="#!">
+                                    Lavis 18 Residence
+                                </a>
+                            </h3>
+                            <p class="desc line-clamp">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/image/beds.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/image/bath.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="./assets/image/sqft.svg" alt="" class="icon">
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="stast">
+            <div class="content">
+                <div class="row">
+                    <div class="img-block">
+                        <img src="./assets/image/stast-img.jpg" alt="You’ve found a neighborhood you love.">
+                    </div>
+
+                    <div class="info">
+                        <h3 class="title">You’ve found a neighborhood you love.</h3>
+                        <p class="desc">When you own a home, you’re committing to living in one location for a while. In
+                            a recent Trulia survey, we found that five out of six respondents said finding the right
+                            neighborhood
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
