--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main style="height: 10000px;">
+    <main>
         <header>
             <div class="content">
                 <nav>
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </header>
+
         <div class="clients">
             <div class="content">
                 <div class="row">
@@ -205,7 +206,65 @@
             <div class="content">
                 <div class="row">
                     <div class="img-block">
-                        <img src="./assets/image/stast-img.jpg" alt="You’ve found a neighborhood you love.">
+                        <img class="image" src="./assets/image/stast-img.jpg"
+                            alt="You’ve found a neighborhood you love.">
+                        <div class="trend">
+                            <div class="row">
+                                <strong class="value">40,000+</strong>
+                                <img src="./assets/image/trend-arow-up.svg" alt="" class="icon">
+                            </div>
+                            <p class="desc">By avarage for 2 bedroom apments in San Francisco, CA</p>
+                            <div class="separate"></div>
+                            <div class="avatar-block">
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-1.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-2.jpg" alt="" class="avatar">
+                                </div>
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-3.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-4.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-5.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-6.jpg" alt="" class="avatar">
+                                    <div class="avatar avatar-empty">
+                                        <span>T</span>
+                                    </div>
+                                </div>
+                                <div class="avatar-group">
+                                    <div style="background-color: #24D6D9;" class="avatar avatar-empty">
+                                        <span>FL</span>
+                                    </div>
+                                    <img src="./assets/image/avatar-8.jpg" alt="" class="avatar">
+                                    <div style="background-color: #F8C120;" class="avatar avatar-empty">
+                                        <span>S</span>
+                                    </div>
+                                </div>
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-10.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-11.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-12.jpg" alt="" class="avatar">
+                                    <div style="background-color: #F97F6B;" class="avatar avatar-empty">
+                                        <span>JJ</span>
+                                    </div>
+                                </div>
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-14.jpg" alt="" class="avatar">
+                                    <div style="background-color: #73A242;" class="avatar avatar-empty">
+                                        <span>QV</span>
+                                    </div>
+                                </div>
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-16.jpg" alt="" class="avatar">
+                                    <img src="./assets/image/avatar-17.jpg" alt="" class="avatar">
+
+                                </div>
+                                <div class="avatar-group">
+                                    <img src="./assets/image/avatar-18.jpg" alt="" class="avatar">
+                                    <div class="avatar avatar-empty">
+                                        <span>IU</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="info">
@@ -216,8 +275,115 @@
                         </p>
                     </div>
                 </div>
+                <div class="row row-qty">
+                    <div class="qty-item">
+                        <strong class="qty">2,500</strong>
+                        <p class="qty-desc">Homes For Sale</p>
+                    </div>
+                    <div class="qty-item">
+                        <strong class="qty">5,000+</strong>
+                        <p class="qty-desc">Homes Recently Sold</p>
+                    </div>
+                    <div class="qty-item">
+                        <strong class="qty">170+</strong>
+                        <p class="qty-desc">Price Reduced</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="subscription">
+            <div class="content">
+                <div class="row">
+                    <div class="body">
+                        <div class="info">
+                            <h2 class="sub-title line-clamp" style="--line-clamp: 2">
+                                Subscribe to our Newsletter!
+                            </h2>
+                            <p class="desc line-clamp" style="--line-clamp: 3">
+                                Subscribe to our newsletter and stay updated.
+                            </p>
+                            <a href=" #!" class="btn">Subscribe</a>
+                        </div>
+                        <img src="./assets/image/subscription.svg" alt="Subscribe to our Newsletter!" class="image">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <div class="col">
+                        <h3 class="title">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3 class="title">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3 class="title">Get in touch</h3>
+                        <p class="desc">
+                            You’ll find your next home, in any style you prefer.
+                        </p>
+                        <div class="social">
+                            <a href="#!" class="link"><img src="./assets/image/facebook.svg" alt=""></a>
+                            <a href="#!" class="link"><img src="./assets/image/twiter.svg" alt=""></a>
+                            <a href="#!" class="link"><img src="./assets/image/linked.svg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-bottom">
+                    <img src="./assets/image/logo.svg" alt="" class="img">
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
+
     </main>
 </body>
 
