--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <main>
-            <header>
+            <header class="header">
                 <div class="content">
                     <nav>
                         <div class="navbar">
@@ -32,6 +32,10 @@
                             </div>
                         </div>
                     </nav>
+                </div>
+            </header>
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -53,7 +57,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <div class="clients">
                 <div class="content">
